    input transitions of a state can be pushed to all outgoing
    transitions of a state, and vice-versa.  This is repeated until a
    fix point is reached.  propagate_marks_vector() does not modify
    the automaton and returns a vector of the acc_cond::mark_t that
    should be on each transition; propagate_marks_here() actually
    modifies the automaton.

  Bugs fixed:

  - degeneralize_tba() was incorrectly not honnoring the "skip_level"
    optimization after creating an accepting transition; as a
    consequence, some correct output could be larger than necessary
    (but still correct).

New in spot 2.8.5 (2020-01-04)

  Bugs fixed:

  - ltl2tgba -B could return automata with "t" acceptance, instead
    of the expected Inf(0).

  - twa_graph::merge_edges() (a.k.a. autfilt --merge-transitions) was
    unaware that merging edges can sometimes transform a
    non-deterministic automaton into a deterministic one, causing the
    following unexpected diagnostic:
    "print_hoa(): automaton is universal despite prop_universal()==false"
    The kind of non-deterministic automata where this occurs is not
    naturally produced by any Spot algorithm, but can be found for
    instance in automata produced by Goal 2015-10-18.

New in spot 2.8.4 (2019-12-08)

  Bugs fixed:

  - The Rabin-to-Büchi conversion could misbehave when applied to
    Rabin-like acceptance with where some pairs have missing Inf(.)
    (e.g. Fin(0)|(Inf(1)&Fin(2))) and when some of the SCCs do not
    visit the remaining Inf(.).  This indirectly caused the
    complementation algorithm to produce incorrect results on such
    inputs, causing false positives in ltlcross and autcross.

  - Work around a small difference between Python 3.7 and 3.8, causing
    spurious failures of the test suite.

New in spot 2.8.3 (2019-11-06)

  Build:

  - Minor portabilities improvements with C++17 deprecations.

  Python:

  - Doing "import spot.foo" will now load any spot-extra/foo.py on